--- a/systemd/ngrok.service
+++ b/systemd/ngrok.service
@@ -17,8 +17,8 @@ ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/ngrok:lates
 ExecStart=/bin/bash -c \
   "/usr/bin/docker run -t --rm --name %p \
     --net=host \
-    --env VIRTUAL_HOST %p.$(hostname -d) \
-    --env VIRTUAL_PORT 4040 \
+    --env VIRTUAL_HOST=%p.$(hostname -d) \
+    --env VIRTUAL_PORT=4040 \
     --cap-add NET_ADMIN \
     quay.io/albertrdixon/ngrok:latest docker-start"
 ExecStop=/bin/bash -c "/usr/bin/docker stop %p"
