--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -27,7 +27,7 @@ ExecStart=/bin/bash -c \
     -p 32469:32469 --cap-add=NET_ADMIN \
     --cap-add=NET_BROADCAST --cap-add=NET_RAW \
     --dns 192.168.1.2 --hostname %p \
-    --env VIRTUAL_HOST=%p.$(hostname -d) \
+    --env VIRTUAL_HOST=%p.$(hostname -d),%p \
     --env VIRTUAL_PORT=32400 \
     --env-file /etc/sysconfig/%p \
     quay.io/albertrdixon/plex:latest docker-start"
