--- a/systemd/btsync.service
+++ b/systemd/btsync.service
@@ -18,8 +18,8 @@ ExecStart=/bin/bash -c \
   "/usr/bin/docker run -t --rm --name %p \
     --volume /data:/data \
     --volumes-from btsync-data \
-    --port 3369:3369 \
-    --port 3369:3369/udp \
+    --publish 3369:3369 \
+    --publish 3369:3369/udp \
     --env VIRTUAL_HOST=%p.$(hostname -d),%p \
     --env VIRTUAL_PORT=8888 \
     --env-file /etc/sysconfig/%p \
