--- a/systemd/metrics.service
+++ b/systemd/metrics.service
@@ -11,17 +11,8 @@ Restart=on-failure
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-ExecStartPre=-/bin/bash -c "/usr/bin/docker kill %p"
-ExecStartPre=-/bin/bash -c "/usr/bin/docker rm -f %p"
-ExecStartPre=/bin/bash -c "/usr/bin/docker pull prom/node-exporter"
-ExecStart=/bin/bash -c \
-  "/usr/bin/docker run -t --rm --name %p \
-    --expose 9100 \
-    --env VIRTUAL_HOST=%p-$(hostname -f),%p-$(hostname -s) \
-    --env VIRTUAL_PORT=9100 \
-    prom/node-exporter -web.listen-address='0.0.0.0:9100'"
-ExecStop=/bin/bash -c "/usr/bin/docker stop %p"
-ExecReload=/usr/bin/docker restart %p
+EnvironmentFile=-/etc/sysconfig/%p
+ExecStart=/usr/local/bin/node_exporter $OPTIONS
 
 [Install]
 WantedBy=multi-user.target
