--- a/systemd/couchpotato-transmission.service
+++ b/systemd/couchpotato-transmission.service
@@ -23,7 +23,7 @@ ExecStart=/bin/bash -c \
     --dns 209.222.18.222 --dns 209.222.18.218 \
     --cap-add MKNOD --cap-add NET_ADMIN \
     --expose 9091 --hostname %p \
-    --env VIRTUAL_HOST=%p.$(hostname -d) \
+    --env VIRTUAL_HOST=%p.$(hostname -d),%p \
     --env VIRTUAL_PORT=9091 \
     --env-file /etc/sysconfig/%p \
     quay.io/albertrdixon/transmission:latest docker-start"
