--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -25,9 +25,8 @@ ExecStart=/bin/bash -c \
     -p 32411:32411/udp -p 32412:32412/udp \
     -p 32413:32413/udp -p 32414:32414/udp \
     -p 32469:32469 --cap-add=NET_ADMIN \
-    --net=host \
     --cap-add=NET_BROADCAST --cap-add=NET_RAW \
-    --dns 192.168.1.2 --hostname %p \
+    --dns 192.168.1.2 --net host \
     --env VIRTUAL_HOST=%p.$(hostname -d),%p \
     --env VIRTUAL_PORT=32400 \
     --env-file /etc/sysconfig/%p \
