--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -26,7 +26,7 @@ ExecStart=/bin/bash -c \
     -p 32413:32413/udp -p 32414:32414/udp \
     -p 32469:32469 --cap-add=NET_ADMIN \
     --cap-add=NET_BROADCAST --cap-add=NET_RAW \
-    --net host \
+    --dns 192.168.1.2 --hostname %p.$(hostname -d) \
     --env VIRTUAL_HOST=%p.$(hostname -d),%p \
     --env VIRTUAL_PORT=32400 \
     --env-file /etc/sysconfig/%p \
