--- a/systemd/docker-proxy.service
+++ b/systemd/docker-proxy.service
@@ -15,8 +15,11 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStartPre=/bin/bash -c "/usr/bin/docker pull jwilder/nginx-proxy:latest"
 ExecStart=/bin/bash -c \
   "/usr/bin/docker run --rm --name %p -t \
-    -v /var/run/docker.sock:/tmp/docker.sock:ro \
-    -p 80:80 jwilder/nginx-proxy:latest"
+    --volume /var/run/docker.sock:/tmp/docker.sock:ro \
+    --volume /etc/certs:/etc/nginx/certs \
+    --publish 80:80 \
+    --publish 443:443 \
+    jwilder/nginx-proxy:latest"
 ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
 
