update env and options file locations

--- a/systemd/container-metrics.service
+++ b/systemd/container-metrics.service
@@ -11,7 +11,7 @@ Restart=on-failure
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-EnvironmentFile=-/etc/sysconfig/%p
+EnvironmentFile=-/etc/sysconfig/%p/env
 ExecStartPre=-/bin/bash -c "/usr/bin/docker kill %p"
 ExecStartPre=-/bin/bash -c "/usr/bin/docker rm -f %p"
 ExecStartPre=/bin/bash -c "/usr/bin/docker pull prom/container-exporter"
