--- a/systemd/btsync.service
+++ b/systemd/btsync.service
@@ -22,7 +22,7 @@ ExecStart=/bin/bash -c \
     --publish 3369:3369/udp \
     --env VIRTUAL_HOST=%p.$(hostname -d),%p \
     --env VIRTUAL_PORT=8888 \
-    --env-file /etc/sysconfig/%p \
+    --env-file /etc/sysconfig/%p/env \
     quay.io/albertrdixon/btsync:latest docker-start"
 ExecStop=/bin/bash -c "/usr/bin/docker stop %p"
 ExecReload=/usr/bin/docker restart %p
