--- a/systemd/mongodb.service
+++ b/systemd/mongodb.service
@@ -11,7 +11,7 @@ Restart=on-failure
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-EnvironmentFile=-/etc/sysconfig/%p
+EnvironmentFile=-/etc/sysconfig/%p/run
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStartPre=/bin/bash -c "/usr/bin/docker pull mongo:latest"
