--- a/systemd/ngrok.service
+++ b/systemd/ngrok.service
@@ -20,7 +20,7 @@ ExecStart=/bin/bash -c \
     --env VIRTUAL_HOST=%p.$(hostname -d) \
     --env VIRTUAL_PORT=4040 \
     --cap-add NET_ADMIN \
-    --env-file /etc/sysconfig/%p \
+    --env-file /etc/sysconfig/%p/env \
     quay.io/albertrdixon/ngrok:latest docker-start"
 ExecStop=/bin/bash -c "/usr/bin/docker stop %p"
 ExecReload=/usr/bin/docker restart %p
