--- a/systemd/sabnzb.service
+++ b/systemd/sabnzb.service
@@ -26,7 +26,7 @@ ExecStart=/bin/bash -c \
     --env VPN_ENABLED=yes \
     --env VPN_PROV=pia \
     --env ENABLE_PRIVOXY=yes \
-    --env-file /etc/sysconfig/%p \
+    --env-file /etc/sysconfig/%p/env \
     --cap-add=NET_ADMIN \
     albertdixon/arch-sabnzbdvpn"
 ExecStop=/bin/bash -c "/usr/bin/docker stop %p"
