--- a/systemd/sickrage-transmission.service
+++ b/systemd/sickrage-transmission.service
@@ -26,7 +26,7 @@ ExecStart=/bin/bash -c \
     --env VIRTUAL_HOST=%p.$(hostname -d),%p \
     --env VIRTUAL_PORT=9091 \
     --env-file /etc/sysconfig/%p/env \
-    quay.io/albertrdixon/transmission:latest docker-start"
+    quay.io/albertrdixon/transmission:latest"
 ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
 
