--- a/systemd/couchpotato-transmission.service
+++ b/systemd/couchpotato-transmission.service
@@ -7,7 +7,7 @@ After=docker.service couchpotato-transmission-data.service movie-downloads.servi
 
 [Service]
 TimeoutStartSec=20m
-Restart=on-failure
+Restart=always
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
