--- a/systemd/couchpotato.service
+++ b/systemd/couchpotato.service
@@ -7,7 +7,7 @@ Requires=docker.service movie-downloads.service couchpotato-transmission.service
 
 [Service]
 TimeoutStartSec=20m
-Restart=on-failure
+Restart=always
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
