--- a/systemd/sickrage.service
+++ b/systemd/sickrage.service
@@ -7,7 +7,7 @@ After=docker.service tv-downloads.service network-online.target
 
 [Service]
 TimeoutStartSec=20m
-Restart=on-failure
+Restart=always
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
