Add WebTools 2.0 port for plex

--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -20,7 +20,7 @@ ExecStart=/bin/bash -c \
     --volume /data:/data \
     --volume /etc/timezone:/etc/timezone:ro \
     --volume /etc/localtime:/etc/localtime:ro \
-    -p 32400:32400 -p 1900:1900/udp -p 3005:3005 \
+    -p 32400:32400 -p 33400:33400 -p 1900:1900/udp -p 3005:3005 \
     -p 5353:5353/udp -p 8324:8324 -p 32410:32410/udp \
     -p 32411:32411/udp -p 32412:32412/udp \
     -p 32413:32413/udp -p 32414:32414/udp \
