--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -28,8 +28,7 @@ ExecStart=/bin/bash -c \
     --cap-add=NET_ADMIN \
     --dns 8.8.8.8 --dns 8.8.4.4 \
     --hostname %p.$(hostname -d) \
-    --env VIRTUAL_HOST=%p.$(hostname -d),%p \
-    --env VIRTUAL_PORT=32400 \
+    --label traefik.port=32400 \
     --env-file /etc/sysconfig/%p/env \
     quay.io/albertrdixon/plex:latest"
 ExecStop=/usr/bin/docker stop %p
