--- a/systemd/couchpotato-transmission.service
+++ b/systemd/couchpotato-transmission.service
@@ -23,8 +23,8 @@ ExecStart=/bin/bash -c \
     --dns 209.222.18.222 --dns 209.222.18.218 \
     --cap-add MKNOD --cap-add NET_ADMIN \
     --expose 9091 --hostname %p \
-    --env VIRTUAL_HOST=%p.$(hostname -d),%p \
-    --env VIRTUAL_PORT=9091 \
+    --label traefik.frontend.rule=%p.$(hostname -d),%p \
+    --label traefik.port=9091 \
     --env-file /etc/sysconfig/%p/env \
     quay.io/albertrdixon/transmission:latest"
 ExecStop=/bin/bash -c "/usr/bin/docker stop %p"
