--- a/systemd/couchpotato.service
+++ b/systemd/couchpotato.service
@@ -23,9 +23,8 @@ ExecStart=/bin/bash -c \
     --volume /data/movies:/movies \
     --volume /etc/timezone:/etc/timezone:ro \
     --volume /etc/localtime:/etc/localtime:ro \
-    --publish 5050:5050 \
-    --env VIRTUAL_HOST=%p.$(hostname -d),%p \
-    --env VIRTUAL_PORT=5050 \
+    --label traefik.frontend.rule=%p.$(hostname -d),%p \
+    --label traefik.port=5050 \
     --env-file /etc/sysconfig/%p/env \
     $OPTIONS \
     quay.io/albertrdixon/couchpotato:latest"
