--- a/systemd/sabnzb.service
+++ b/systemd/sabnzb.service
@@ -24,6 +24,7 @@ ExecStart=/bin/bash -c \
     --env VPN_PROV=pia \
     --env ENABLE_PRIVOXY=yes \
     --env-file /etc/sysconfig/%p/env \
+    --expose 8118 \
     --label traefik.port=8118 \
     --label traefik.frontend.rule=Host:%p.$(hostname -d),%p \
     --cap-add=NET_ADMIN \
