--- a/systemd/couchpotato.service
+++ b/systemd/couchpotato.service
@@ -23,6 +23,7 @@ ExecStart=/bin/bash -c \
     --volume /data/movies:/movies \
     --volume /etc/timezone:/etc/timezone:ro \
     --volume /etc/localtime:/etc/localtime:ro \
+    --expose 5050 \
     --label traefik.frontend.rule=%p.$(hostname -d),%p \
     --label traefik.port=5050 \
     --env-file /etc/sysconfig/%p/env \
