--- a/systemd/docker-proxy.service
+++ b/systemd/docker-proxy.service
@@ -20,8 +20,15 @@ ExecStart=/bin/bash -c \
     --publish 443:443 \
     --publish 8888:8888 \
     traefik:latest \
-     --docker --docker.domain=$(hostname -d) \
-     --web --web.address=':8888' -l INFO"
+     --entrypoints='Name:http Address:80' \
+     --entrypoints='Name:https Address:443' \
+     --defaultentrypoints=http \
+     --docker \
+     --docker.watch \
+     --docker.domain=$(hostname -d) \
+     --web \
+     --web.address=':8888' \
+     --loglevel=INFO"
 ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
 
