--- a/systemd/sickrage.service
+++ b/systemd/sickrage.service
@@ -16,7 +16,7 @@ ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/sickrage:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --rm --name %p -t \
+  "/usr/bin/docker run --rm --name %p \
     --hostname %p \
     --volumes-from tv-downloads \
     --volumes-from %p-data \
