--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -15,7 +15,7 @@ ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/plex:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --rm --name %p -t \
+  "/usr/bin/docker run --rm --name %p \
     --volumes-from plex-data \
     --volume /data:/data \
     --volume /etc/timezone:/etc/timezone:ro \
