--- a/systemd/plex-data.service
+++ b/systemd/plex-data.service
@@ -14,7 +14,7 @@ StandardError=inherit
 SyslogIdentifier=%p
 ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/plex:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker port %p >/dev/null 2>&1 \
+  "/usr/bin/docker port %p >/dev/null 2>&1 ||\
   /usr/bin/docker create --name %p \
     --entrypoint /bin/echo \
     --volume /plexmediaserver \
