--- a/systemd/sickrage-data.service
+++ b/systemd/sickrage-data.service
@@ -12,9 +12,8 @@ TimeoutStartSec=20m
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/sickrage:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker start %p || \
+  "/usr/bin/docker port %p || \
   /usr/bin/docker create --name %p \
     --entrypoint /bin/echo \
     --volume /data \
