--- a/systemd/sickrage-transmission-data.service
+++ b/systemd/sickrage-transmission-data.service
@@ -12,14 +12,12 @@ TimeoutStartSec=20m
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/transmission:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker start %p || \
-  /usr/bin/docker run --name %p \
+  "/usr/bin/docker port %p || \
+  /usr/bin/docker create --name %p \
     --entrypoint /bin/echo \
     --volume /transmission \
     quay.io/albertrdixon/transmission:latest 'Data for Sickrage Transmission'"
-SuccessExitStatus=0 1 2
 Restart=no
 RemainAfterExit=yes
 
