--- a/systemd/sonarr.service
+++ b/systemd/sonarr.service
@@ -19,7 +19,7 @@ ExecStart=/usr/bin/docker run --rm --name=%p \
   --volume=/dev/rtc:/dev/rtc:ro \
   --volume /etc/timezone:/etc/timezone:ro \
   --volume /etc/localtime:/etc/localtime:ro \
-  --volumes=/data/tv_shows:/tv \
+  --volume=/data/tv_shows:/tv \
   --expose=8989 \
   --label=traefik.port=8081 \
   --label=traefik.frontend.rule=$TRAEFIK_RULE \
