--- a/systemd/sonarr.service
+++ b/systemd/sonarr.service
@@ -9,7 +9,8 @@ Restart=always
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-Environment="TRAEFIK_RULE=Host:%p" "SONARR_TAG=latest"
+Environment=TRAEFIK_RULE=Host:%p
+Environment=SONARR_TAG=latest
 EnvironmentFile=-/etc/sysconfig/%p/run
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
@@ -24,7 +25,6 @@ ExecStart=/usr/bin/docker run --rm --name=%p \
   --label=traefik.port=8989 \
   --label=traefik.frontend.rule=${TRAEFIK_RULE} \
   --env-file=/etc/sysconfig/%p/env \
-  ${OPTIONS} \
   linuxserver/sonarr:${SONARR_TAG}
 ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
